// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendersDropdown 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c1 {
  position: relative;
  border-color: #D2D2D2;
  background-color: transparent;
  height: 32px;
}

.c1:hover,
.c1:focus-within {
  border-color: #b9b9b9;
}

.c2 {
  width: 100%;
  height: 32px;
  padding-right: 24px;
  background-color: #FFFFFF;
  border: none;
  border-bottom: 1px solid #D2D2D2;
  border-radius: 0;
  font-size: 16px;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c2:not(:focus):invalid {
  color: #D2D2D2;
}

.c2:hover,
.c2:focus,
.c2:focus-visible,
.c2:checked {
  outline: none;
  border-color: #b9b9b9;
}

.c3 {
  position: absolute;
  top: 50%;
  z-index: 1;
  right: 0;
  pointer-events: none;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <select
      class="c2"
      id="MM_SMORES_0"
    >
      <option
        hidden=""
        value=""
      />
      <option
        value="MONDAY"
      >
        Monday
      </option>
      <option
        value="TUESDAY"
      >
        Tuesday
      </option>
      <option
        value="WEDNESDAY"
      >
        Wednesday
      </option>
      <option
        value="THURSDAY"
      >
        Thursday
      </option>
      <option
        value="FRIDAY"
      >
        Friday
      </option>
      <option
        value="SATURDAY"
      >
        Saturday
      </option>
      <option
        value="SUNDAY"
      >
        Sunday
      </option>
    </select>
    <div
      class="c3"
    >
      <span
        class="c4"
        color="subtext"
        rotate="0"
        size="24"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
            fill="#636768"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`rendersDropdownWithGroups 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.c1 {
  position: relative;
  border-color: #D2D2D2;
  background-color: transparent;
  height: 32px;
}

.c1:hover,
.c1:focus-within {
  border-color: #b9b9b9;
}

.c2 {
  width: 100%;
  height: 32px;
  padding-right: 24px;
  background-color: #FFFFFF;
  border: none;
  border-bottom: 1px solid #D2D2D2;
  border-radius: 0;
  font-size: 16px;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c2:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c2:not(:focus):invalid {
  color: #D2D2D2;
}

.c2:hover,
.c2:focus,
.c2:focus-visible,
.c2:checked {
  outline: none;
  border-color: #b9b9b9;
}

.c3 {
  position: absolute;
  top: 50%;
  z-index: 1;
  right: 0;
  pointer-events: none;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <select
      class="c2"
      id="MM_SMORES_1"
    >
      <optgroup>
        <option
          hidden=""
          value=""
        />
      </optgroup>
      <optgroup
        label="Weekday"
      >
        <option
          value="MONDAY"
        >
          Monday
        </option>
        <option
          value="TUESDAY"
        >
          Tuesday
        </option>
        <option
          value="WEDNESDAY"
        >
          Wednesday
        </option>
        <option
          value="THURSDAY"
        >
          Thursday
        </option>
        <option
          value="FRIDAY"
        >
          Friday
        </option>
      </optgroup>
      <optgroup
        label="Weekend"
      >
        <option
          value="SATURDAY"
        >
          Saturday
        </option>
        <option
          value="SUNDAY"
        >
          Sunday
        </option>
      </optgroup>
    </select>
    <div
      class="c3"
    >
      <span
        class="c4"
        color="subtext"
        rotate="0"
        size="24"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
            fill="#636768"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
